# rabbitmq-rs-app

./: .gitignore  README.md  Vagrantfile
common/config/: Cargo.toml
common/config/src/: lib.rs
common/database/: Cargo.toml  diesel.toml
common/database/migrations/2022-09-08-082637_data/: up.sql
common/database/migrations/2022-11-18-191404_data/: down.sql  up.sql
common/database/migrations/2022-11-20-141918_data/: down.sql  up.sql
common/database/src/: db.rs  lib.rs  models.rs  schema.rs
common/database/src/ops/: image_ops.rs  log_ops.rs  mod.rs  user_ops.rs
common/messaging/: Cargo.toml
common/messaging/src/: lib.rs  mb.rs
common/protocol/: Cargo.toml
common/protocol/src/: lib.rs  rabbit.rs  validation.rs
mandate/resources/abstract/: abstract.tex  compile.sh
mandate/resources/diaries/: diaries.tex
mandate/resources/documentation/: documentation.tex  listings-rust.sty  references.bib
mandate/resources/documentation/sections/: analysis.tex  conclusion.tex  implementation.tex  infrastructure.tex  introduction.tex  planning.tex  structure.tex  technologies.tex  testing.tex  usage.tex
mandate/resources/documentation/sections/images/: net.drawio  request-reply.drawio
webapp/: Cargo.toml
webapp/frontend/: Cargo.toml  index.html
webapp/frontend/src/: lib.rs  main.rs  utils.rs
webapp/frontend/website/: package-lock.json  package.json  webpack.config.js
webapp/frontend/website/www/: bootstrap.js  forms.css  gallery.html  gallery.js  index.html  index.js  login.html  login.js  logout.html  register.html  register.js  upload.html  upload.js
webapp/frontend/website/www/style/: dropzone.css  style.css
webapp/webserver/: Cargo.toml  config.toml  index.html
webapp/webserver/src/: app.rs  args.rs  handler.rs  main.rs  rabbit.rs
webapp/webserver/src/utils/: mod.rs
worker/: Cargo.toml  config.toml
worker/src/: app.rs  main.rs
worker/src/app/: utils.rs
