[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
log = "0.4"
env_logger = "0.9.0"
sha2 = "0.10.5"
image = "0.24.5"
#threadpool = "1.8.1" # thread pool
# needed?
futures = { version = "0.3.17", default-features = true }
rand = "0.8.5"
num_cpus = "1.14.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

database = { path = "../common/database" }
messaging = { path = "../common/messaging" }
config = { path = "../common/config" }
protocol = { path = "../common/protocol" }