[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web-sys = "0.3.57"
log = "0.4"
env_logger = "0.9.0"
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
#ws_stream_tungstenite = "0.8.0"

axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] } # SinglePageApp
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "^0.4"
tower-http = { version = "^0.3", features = ["full"] }
#tracing = "^0.1"
#tracing-subscriber = "^0.3"

messaging = { path = "../../common/messaging" }
config = { path = "../../common/config" }
protocol = { path = "../../common/protocol" }