[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
clap = { version = "3.2.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

warp = "0.3.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "^0.4"
tower-http = { version = "^0.3", features = ["full"] }
#tracing = "^0.1"
#tracing-subscriber = "^0.3"

tera = "1.17.1"
lazy_static = "1.4.0"
once_cell = "1.16.0"

messaging = { path = "../../common/messaging" }
config = { path = "../../common/config" }
protocol = { path = "../../common/protocol" }